BUGFIX: Don't show horizontal scroll bar of table.

--- a/css/main.scss
+++ b/css/main.scss
@@ -361,7 +361,7 @@ hr {
 }
 
 .blind-table-container {
-  overflow-x: scroll;
+  overflow-x: auto;
   width: 100%;
 }
 
